@@ -593,28 +593,7 @@ bonobo_help_display_cb (BonoboUIComponent *component,
 		cl->program, doc_id, doc_id, NULL, &error);
 
 	if (error) {
-#if 1
-#warning Switch to the currently disabled dialog code once the string freeze is over
 		g_warning ("Error: '%s'", error->message);
-#else
-/* Disabled for now:
-		GtkWidget *dialog;
-
-		dialog = gtk_message_dialog_new (NULL, 0, 
-                                                 GTK_MESSAGE_ERROR,
-						 GTK_BUTTONS_OK,
-						 _("Could not display help for this application"));
-		gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog),
-							  "%s",
-							  error->message);
-		g_signal_connect_swapped (dialog, "response",
-					  G_CALLBACK (gtk_widget_destroy),
-					  dialog);
-
-		gtk_window_present (GTK_WINDOW (dialog));
- */
-#endif
-
 		g_error_free (error);
 	}
 }
